fix commands to find instance ids

--- a/cloudformation-ec2.yaml
+++ b/cloudformation-ec2.yaml
@@ -93,4 +93,4 @@ Resources:
               Primary: true
       Tags:
       - Key: Name
-        Value: iperf-client-server
+        Value: iperf-server-instance
