--- a/cloudformation-ec2.yaml
+++ b/cloudformation-ec2.yaml
@@ -80,6 +80,7 @@ Resources:
             yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
             yum -y install iperf
             yum -y install iperf3
+            yum -y install git
             cd /home/ec2-user
             git clone https://github.com/richardimaoka/aws-iperf
       NetworkInterfaces: 
