--- a/cloudformation-vpc-sub.yaml
+++ b/cloudformation-vpc-sub.yaml
@@ -7,6 +7,8 @@ Parameters:
     MaxLength: "18"
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
+  VPCMainStack:
+    Type: String
   PeerVPCAccountId:
     Type: String
 
