--- a/cloudformation-ec2.yaml
+++ b/cloudformation-ec2.yaml
@@ -36,14 +36,14 @@ Parameters:
       - SubnetDifferentAZ
       - SubnetDifferentRegionAZ
   IPAddressIPerfServer:
-    Description: Local IP address of the web server
+    Description: Local IP address of the iperf server
     Type: String
     MinLength: "7"
     MaxLength: "15"
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})'
     ConstraintDescription: must be a valid IP of the form x.x.x.x, in the subnet CIDR range 10.0.0.0/16 defined in this template.
   IPAddressIPerfClient:
-    Description: Local IP address of wrk
+    Description: Local IP address of the iperf client
     Type: String
     MinLength: "7"
     MaxLength: "15"
