--- a/cloudformation-vpc-sub.yaml
+++ b/cloudformation-vpc-sub.yaml
@@ -104,3 +104,20 @@ Resources:
       FromPort: 8
       ToPort: 8
       CidrIp: !Ref SSHLocation
+
+Outputs:
+  VPC:
+    Description: VPC
+    Value: !Ref VPC
+    Export:
+      Name: !Sub "${AWS::StackName}-VPCId"
+  SecurityGroup:
+    Description: SecurityGroup
+    Value: !Ref SecurityGroup
+    Export:
+      Name: !Sub "${AWS::StackName}-SecurityGroup"
+  SubnetDifferentRegion:
+    Description: Subnet Different Region
+    Value: !Ref SubnetSameAZ
+    Export:
+      Name: !Sub "${AWS::StackName}-SubnetDifferentRegion"
