--- a/cloudformation-ec2.yaml
+++ b/cloudformation-ec2.yaml
@@ -116,7 +116,7 @@ Resources:
       # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-keypair.html
       KeyName: "demo-key-pair"
       # To allow running commands via SSM
-      IamInstanceProfile: InstanceProfileSSM
+      IamInstanceProfile: !Ref InstanceProfileSSM
       # https://aws.amazon.com/premiumsupport/knowledge-center/network-throughput-benchmark-linux-ec2/
       UserData:
         Fn::Base64: |
